kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
    visualize: "true"
spec:
  type: LoadBalancer  
  ports:
   -  port: 80
      targetPort: 8080
      name: http
  selector:
    app: api-gateway
    serving: "true"
