kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s
  annotations:
    kubernetes.io/ingress.class: "api-gateway"  
spec:
  rules:
  - host: k8s.ksms.com.br
    http:
      paths:      
      - backend:
          serviceName: k8s
          servicePort: 80
