kubernetes/ksms-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ksms-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ksms
spec:
  hosts:
  - "*"
  gateways:
  - ksms-gateway
  http:
  - match:
    - uri:
        exact: /storage-service
    route:
    - destination:
        host: storage-service
        port:
          number: 80
